anomaly-detection/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: kronos

  labels:
    app: kronos
    environment: production
