anomaly-detection/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kronos-ingress
  namespace: kronos

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: kronos.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: kronos-api

                port:
                  number: 8000
